--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10, 3.11]
+        python-version: ['3.10', '3.11']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,12 +31,10 @@ jobs:
         run: python -m pip install --upgrade pip setuptools wheel
 
       - name: Install dependencies
-        run: |
-          python -m pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          pytest --maxfail=1 -q
+        run: pytest --maxfail=1 -q
 
       - name: Upload test results
         if: always()
@@ -57,7 +55,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: 3.11
+          python-version: '3.11'
 
       - name: Install docs dependencies
         run: |
@@ -66,9 +64,7 @@ jobs:
           pip install sphinx sphinx-rtd-theme
 
       - name: Build Sphinx docs
-        working-directory: docs
-        run: |
-          make html
+        run: sphinx-build -b html docs docs/_build/html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
