--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,3 +84,31 @@ jobs:
           tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # НОВЫЙ JOB ДЛЯ DOCKER CD
+  docker-build:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    # Запускаем только для release веток после успешных тестов
+    if: startsWith(github.ref, 'refs/heads/release/') && needs.test.result == 'success'
+    needs: test
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:${{ github.sha }} .
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push Docker images
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:${{ github.sha }}
