--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,26 +89,29 @@ jobs:
   docker-build:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    # Запускаем только для release веток после успешных тестов
     if: startsWith(github.ref, 'refs/heads/release/') && needs.test.result == 'success'
     needs: test
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+  
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
+        uses: docker/setup-buildx-action@v3
+  
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:${{ github.sha }} .
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
+          docker build -t ghcr.io/${{ github.repository_owner }}/ci-cd-app:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/ci-cd-app:${{ github.sha }} .
+  
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+  
       - name: Push Docker images
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository_owner }}/ci-cd-app:latest
+          docker push ghcr.io/${{ github.repository_owner }}/ci-cd-app:${{ github.sha }}
