--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,5 +113,5 @@ jobs:
   
       - name: Push Docker images
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/ci-cd-app:latest
-          docker push ghcr.io/${{ github.repository_owner }}/ci-cd-app:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository }}/ci-cd-app:latest
+          docker push ghcr.io/${{ github.repository }}/ci-cd-app:${{ github.sha }}
